@@ -3,8 +3,7 @@ envlist =
     lint
     types
     docs
-    py{39,38,37,36,35,py3}
-skip_missing_interpreters = True
+    py{310,39,38,37,36,35,py3}
 
 [testenv]
 passenv = DISPLAY
@@ -14,7 +13,7 @@ deps =
     pytest
     # Must pin that version to support PyPy3
     pypy3: numpy==1.15.4
-    py{39,38,37,36,35}: numpy
+    py3{10,9,8,7,6,5}: numpy
     pillow
     wheel
 commands =
